--- a/src/index.scss
+++ b/src/index.scss
@@ -202,23 +202,23 @@ button {
   }
 }
 
-.station-animation-enter {
+.winner-animation-enter {
   opacity: 0;
   transform: scale(0.9);
   transform-origin: top center;
 }
 
-.station-animation-enter-active {
+.winner-animation-enter-active {
   opacity: 1;
   transform: translateX(0);
   transition: opacity 300ms, transform 300ms;
 }
 
-.station-animation-exit {
+.winner-animation-exit {
   opacity: 1;
 }
 
-.station-animation-exit-active {
+.winner-animation-exit-active {
   opacity: 0;
   transform-origin: top center;
   transform: scale(0.9);
